Finished Lambdas and started testing. Began front-end code.
