# Documentation/openAPI_specification.yaml
@@ -3,13 +3,7 @@ info:
   description: This is an API for accessing the version control system hosted by ReVersion
   version: "1.0.0-oas3"
   title: ReVersion API
-  #license:
-    # TODO: change license info if necessary
-    #name: Apache 2.0
-    #url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
-
-# TODO: hypermedia format for JSON
-#       e.g. application/vnd.collection+json, application/vnd.siren+json, application/ld+json, HAL, etc...
+  
 paths:
   /repositories:
     get:
@@ -539,14 +533,16 @@ components:
     LockData:
       allOf:
         - $ref: '#/components/schemas/LogData'
-        - $ref: '#/components/schemas/DateTimeType'
         - type: object
           properties:
+            timestamp:
+              type: string
             lockedBranchId:
               type: string
               description: for use in the conflict response to a repository-delete request
           required:
             - lockedBranchId
+            - timestamp
     VersionInformation:
       type: object
       description: summary of the latest version information
@@ -554,13 +550,13 @@ components:
         versionId:
           type: string
           description: version identifier
-        dateTime:
-          $ref: '#/components/schemas/DateTimeType'
+        timestamp:
+          type: string
         commitMessage:
           $ref: '#/components/schemas/LogData'
       required:
         - versionId
-        - dateTime
+        - timestamp
         - commitMessage
     CommitConflictErrorMessage:
       type: object
@@ -574,50 +570,6 @@ components:
           $ref: '#/components/schemas/VersionInformation'
       required:
         - errorInfo
-    DateTimeType:
-      type: object
-      properties:
-        date:
-          type: object
-          properties:
-            day:
-              type: integer
-              format: int32
-              description: day of the month
-            month:
-              type: integer
-              format: int32
-              description: month of the year
-            year:
-              type: integer
-              format: int32
-              description: year value
-          required:
-            - day
-            - month
-            - year
-        time:
-          type: object
-          properties:
-            hours:
-              type: integer
-              format: int32
-              description: hours value in military time (no AM/PM)
-            minutes:
-              type: integer
-              format: int32
-              description: minutes value of the hour
-            seconds:
-              type: number
-              format: float
-              description: seconds value as a decimal to encode partial seconds
-          required:
-            - hours
-            - minutes
-            - seconds
-      required:
-        - date
-        - time
     LogData:
       type: object
       description: username and message logged with the update action performed
@@ -648,12 +600,8 @@ components:
           format: uri
         displayData:
           type: string
-        isOwner:
-          type: boolean
-          description: true if the user in question owns this resource
-        isPermitted:
-          type: boolean
-          description: true if the user in question is permitted to access this resource
+        owner:
+          type: string
       required:
         - href
         - displayData
@@ -739,7 +687,6 @@ components:
         text/plain:
           schema:
             $ref: '#/components/schemas/StringObject'
-    # TODO: application/vnd.collection+json, application/vnd.siren+json, application/ld+json, HAL, etc... (instead of application/json)
     ResourcesResponse:
       description: OK
       content:
@@ -752,11 +699,3 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/ResourceItem'
-  
-  #securitySchemes: # TODO (maybe)
-# TODO: set up servers value
-#servers:
-#  - url: '{server}/v1'
-#    variables:
-#      server:
-#        default: https://aws.url.com # TODO
